<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.findhome.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.findhome.view.FavoritesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_ubication"
        android:name="com.example.findhome.view.UbicationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_ubication" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.findhome.view.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />
</navigation>