<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_primary"
    tools:context=".ui.view.LoginActivity">

    <ScrollView
        android:id="@+id/scrollLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/scrollLogin"
            app:layout_constraintEnd_toEndOf="@id/scrollLogin"
            app:layout_constraintTop_toTopOf="@id/scrollLogin"
            >

            <ImageView
                android:id="@+id/imgLogoRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_find_home"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <ImageView
                android:id="@+id/imgTitleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_find_home_title"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imgLogoRegister"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgTitleRegister">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lytSectionForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_section_form"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingBottom="30dp"
                    >

                    <TextView
                        android:id="@+id/txtTitleWelcome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_txt_welcome"
                        android:textStyle="bold"
                        android:layout_marginTop="40dp"
                        android:textColor="@color/blue_accent"
                        android:textSize="40sp"
                        android:gravity="center_horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/lytSectionForm"
                        />

                    <TextView
                        android:id="@+id/txtTitleDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_txt_description"
                        android:textStyle="normal"
                        android:layout_marginTop="0dp"
                        android:textColor="@color/colorHint"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtTitleWelcome"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtEmailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtTitleDescription"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_marginTop="20dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:counterMaxLength="20"
                        app:counterEnabled="true"
                        app:helperText="@string/ui_required"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/ic_subtract"
                        app:endIconTint="@color/color_icon_end"
                        app:endIconContentDescription="hi"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_edt_email"
                            android:inputType="textEmailAddress"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtEmailLayout"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:layout_marginTop="10dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:endIconMode="password_toggle"
                        app:helperText="@string/ui_required"
                        app:counterMaxLength="20"
                        app:counterEnabled="true"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_edt_password"
                            android:inputType="textPassword"

                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_btn"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/blue_accent"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/colorWhite"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/txtPasswordLayout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />

                    <LinearLayout
                        android:id="@+id/layoutHorizontal"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        >

                        <TextView
                            android:id="@+id/txtLoginForgot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_forgot_password"
                            android:textStyle="normal"
                            android:textColor="@color/blue_accent"
                            android:layout_gravity="left"
                            android:layout_weight="1"
                            />

                        <TextView
                            android:id="@+id/txtRegisterLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register_have_account"
                            android:textStyle="normal"
                            android:textColor="@color/blue_accent"
                            android:layout_gravity="right"
                            />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/spinnerRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>